--- a/src/main/resources/assets/energizer/lang/en_us.json
+++ b/src/main/resources/assets/energizer/lang/en_us.json
@@ -1,16 +1,7 @@
 {
   "text.autoconfig.energizer.title": "Energizer",
 
-  "text.autoconfig.energizer.option.vigor_potion": "Vigor Potion",
-  "text.autoconfig.energizer.option.vigor_potion_long": "Vigor Potion Long",
-  "text.autoconfig.energizer.option.vigor_restore_stamina": "Vigor Restore Stamina",
-
-  "text.autoconfig.energizer.option.x_offset": "X Offset",
-  "text.autoconfig.energizer.option.y_offset": "Y Offset",
-
-  "text.autoconfig.energizer.option.stamina_blink": "Stamina Blink",
-
-  "text.autoconfig.energizer.option.heal_multiplier": "Heal Multiplier",
+  "text.autoconfig.energizer.category.stamina": "Stamina",
 
   "text.autoconfig.energizer.option.stamina_decrease": "Stamina Decrease",
   "text.autoconfig.energizer.option.stamina_decrease_hunger": "Stamina Decrease Hunger",
@@ -19,6 +10,23 @@
   "text.autoconfig.energizer.option.stamina_increase_hunger": "Stamina Increase Hunger",
   "text.autoconfig.energizer.option.stamina_increase_empty": "Stamina Increase Empty",
   "text.autoconfig.energizer.option.stamina_increase_hunger_empty": "Stamina Increase Hunger Empty",
+
+  "text.autoconfig.energizer.option.stamina_blink": "Stamina Blink",
+  "text.autoconfig.energizer.option.vigor_wave": "Vigor Wave",
+
+  "text.autoconfig.energizer.option.x_offset": "X Offset",
+  "text.autoconfig.energizer.option.y_offset": "Y Offset",
+
+  "text.autoconfig.energizer.category.potion": "Vigor Potion",
+
+  "text.autoconfig.energizer.option.vigor_potion": "Vigor Potion",
+  "text.autoconfig.energizer.option.vigor_potion_time": "Vigor Potion Time",
+  "text.autoconfig.energizer.option.vigor_potion_long": "Vigor Potion Long",
+  "text.autoconfig.energizer.option.vigor_potion_long_time": "Vigor Potion Long Time",
+
+  "text.autoconfig.energizer.category.heal": "Heal",
+
+  "text.autoconfig.energizer.option.heal_multiplier": "Heal Multiplier",
 
   "attribute.name.energizer.player.stamina": "Stamina",
 
